force-app/main/default/objects/Session__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <inlineHelpText>End Date and Time</inlineHelpText>
    <label>End</label>
    <type>DateTime</type>
</CustomField>