force-app/main/default/objects/Session__c/fields/Location_Venue__c.field-meta.xml
<CustomField>
    <fullName>Location_Venue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location / Venue</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>