force-app/main/default/objects/Session__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partnered Sessions</relationshipLabel>
    <relationshipName>Partnered_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>