force-app/main/default/objects/Session__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <inlineHelpText>Start Date and Time</inlineHelpText>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>