force-app/main/default/objects/Session__c/fields/Volunteers_Registered__c.field-meta.xml
<CustomField>
    <fullName>Volunteers_Registered__c</fullName>
    <label>Volunteers Registered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>