force-app/main/default/objects/Session__c/fields/Volunteers_Required__c.field-meta.xml
<CustomField>
    <fullName>Volunteers_Required__c</fullName>
    <label>Volunteers Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>